Added e3 progress to dnaOrigami repo

--- a/bg.ipynb
+++ b/bg.ipynb
@@ -561,15 +561,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "525daa43-0572-4cf6-8afa-e6a96d8b9e9d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using device: cuda\n"
+     "ename": "RuntimeError",
+     "evalue": "Expected one of cpu, cuda, ipu, xpu, mkldnn, opengl, opencl, ideep, hip, ve, fpga, ort, xla, lazy, vulkan, mps, meta, hpu, mtia, privateuseone device type at start of device string: gpu",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m batch_size \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m16\u001b[39m\n\u001b[0;32m      8\u001b[0m epochs \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m50\u001b[39m\n\u001b[1;32m----> 9\u001b[0m device \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcuda\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcuda\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mis_available\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01melse\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mgpu\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUsing device: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdevice\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Expected one of cpu, cuda, ipu, xpu, mkldnn, opengl, opencl, ideep, hip, ve, fpga, ort, xla, lazy, vulkan, mps, meta, hpu, mtia, privateuseone device type at start of device string: gpu"
      ]
     }
    ],
@@ -582,13 +586,13 @@
     "temperature = 300\n",
     "batch_size = 16\n",
     "epochs = 50\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"gpu\")\n",
     "print(f\"Using device: {device}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "00067075-e866-4409-8b42-a35d405146a9",
    "metadata": {},
    "outputs": [],
@@ -599,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "bb0c56f6-7a5e-435d-b549-cdee5bb3d618",
    "metadata": {},
    "outputs": [],
@@ -625,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "1785b12d-da07-4746-bcf6-5044306b4599",
    "metadata": {},
    "outputs": [],
@@ -666,6 +670,195 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "431f17f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'date': '2024-11-01T21:43:32.171Z',\n",
+       " 'box': [1000, 1000, 1000],\n",
+       " 'systems': [{'id': 0,\n",
+       "   'strands': [{'id': 0,\n",
+       "     'monomers': [{'id': 0,\n",
+       "       'type': 'C',\n",
+       "       'class': 'DNA',\n",
+       "       'p': [0.6250925064086914, 0.8912973403930664, -3.9510698318481445],\n",
+       "       'a1': [0.731939845453898, 0.22192942160610374, 0.6442137800936149],\n",
+       "       'a3': [0.5451819362773774, -0.7578724370556814, -0.35833786502145165],\n",
+       "       'n3': 1,\n",
+       "       'cluster': 1},\n",
+       "      {'id': 1,\n",
+       "       'type': 'G',\n",
+       "       'class': 'DNA',\n",
+       "       'p': [0.4234647750854492, 0.8117465972900391, -2.764071464538574],\n",
+       "       'a1': [0.5302098835156915, 0.20193828264322194, 0.8234673092633266],\n",
+       "       'a3': [-0.4772720183569491, 0.8738187231939106, 0.09301752248500218],\n",
+       "       'n3': 2,\n",
+       "       'n5': 0,\n",
+       "       'cluster': 1},\n",
+       "      {'id': 2,\n",
+       "       'type': 'T',\n",
+       "       'class': 'DNA',\n",
+       "       'p': [0.8160219192504883, 0.5465278625488281, -2.7912302017211914],\n",
+       "       'a1': [0.0249386156625729, -0.039558461861702636, 0.9989059983521826],\n",
+       "       'a3': [-0.37462267221956164, 0.9260342945210864, 0.046025415043309634],\n",
+       "       'n3': 3,\n",
+       "       'n5': 1,\n",
+       "       'cluster': 1},\n",
+       "      {'id': 3,\n",
+       "       'type': 'G',\n",
+       "       'class': 'DNA',\n",
+       "       'p': [1.1758747100830078, 0.13840484619140625, -2.6119565963745117],\n",
+       "       'a1': [-0.8848910738801402, -0.026175991109066574, 0.46506193658125833],\n",
+       "       'a3': [-0.2930628594326165, 0.8073317387749145, -0.5121812413470958],\n",
+       "       'n3': 4,\n",
+       "       'n5': 2,\n",
+       "       'cluster': 1},\n",
+       "      {'id': 4,\n",
+       "       'type': 'C',\n",
+       "       'class': 'DNA',\n",
+       "       'p': [1.3409109115600586, -0.05310535430908203, -2.162555694580078],\n",
+       "       'a1': [-0.9179697023351462, -0.3541726310021123, -0.17858715811548373],\n",
+       "       'a3': [-0.24393748078083818, 0.8591146153487411, -0.4499073050801498],\n",
+       "       'n3': 5,\n",
+       "       'n5': 3,\n",
+       "       'cluster': 1},\n",
+       "      {'id': 5,\n",
+       "       'type': 'A',\n",
+       "       'class': 'DNA',\n",
+       "       'p': [0.583155632019043, -0.2650566101074219, -1.4081096649169922],\n",
+       "       'a1': [-0.8085526393253558, 0.5840239579136711, -0.07182371490567463],\n",
+       "       'a3': [0.009432382464870643, -0.1091813931017053, -0.9939770890525633],\n",
+       "       'n3': 6,\n",
+       "       'n5': 4,\n",
+       "       'cluster': 1},\n",
+       "      {'id': 6,\n",
+       "       'type': 'A',\n",
+       "       'class': 'DNA',\n",
+       "       'p': [0.5956430435180664, 0.05362129211425781, -1.0761795043945312],\n",
+       "       'a1': [-0.951929490715569, -0.2897740622879125, 0.09930376393248186],\n",
+       "       'a3': [-0.06234487621799791, -0.13411735171784997, -0.9890023520586557],\n",
+       "       'n3': 7,\n",
+       "       'n5': 5,\n",
+       "       'cluster': 1},\n",
+       "      {'id': 7,\n",
+       "       'type': 'T',\n",
+       "       'class': 'DNA',\n",
+       "       'p': [0.46901416778564453, 0.24244976043701172, -0.6443243026733398],\n",
+       "       'a1': [-0.4764559700343919, -0.8782630388389158, -0.04054310333484204],\n",
+       "       'a3': [0.2855750218311752, -0.1109810938439846, -0.9519086635362222],\n",
+       "       'n3': 8,\n",
+       "       'n5': 6,\n",
+       "       'cluster': 1},\n",
+       "      {'id': 8,\n",
+       "       'type': 'C',\n",
+       "       'class': 'DNA',\n",
+       "       'p': [0.1842937469482422, 0.39579105377197266, -0.1298685073852539],\n",
+       "       'a1': [0.08258827493866625, -0.9947977061665305, -0.05963808052297337],\n",
+       "       'a3': [0.23479736630039486, 0.07758103536813081, -0.9689434347419911],\n",
+       "       'n3': 9,\n",
+       "       'n5': 7,\n",
+       "       'cluster': 1},\n",
+       "      {'id': 9,\n",
+       "       'type': 'T',\n",
+       "       'class': 'DNA',\n",
+       "       'p': [-0.2230224609375, 0.1557178497314453, 0.1634674072265625],\n",
+       "       'a1': [0.8965262830168781, -0.4192356503621728, 0.14311566415087665],\n",
+       "       'a3': [0.20614558077604583, 0.108871199267836, -0.9724459170033519],\n",
+       "       'n3': 10,\n",
+       "       'n5': 8,\n",
+       "       'cluster': 1},\n",
+       "      {'id': 10,\n",
+       "       'type': 'T',\n",
+       "       'class': 'DNA',\n",
+       "       'p': [-0.2481212615966797, -0.18366622924804688, 0.45972633361816406],\n",
+       "       'a1': [0.6945048394502463, 0.5858525594895649, 0.41765991730080293],\n",
+       "       'a3': [0.3765811998574032, 0.19864389761227405, -0.9048354556798507],\n",
+       "       'n3': 11,\n",
+       "       'n5': 9,\n",
+       "       'cluster': 1},\n",
+       "      {'id': 11,\n",
+       "       'type': 'A',\n",
+       "       'class': 'DNA',\n",
+       "       'p': [-0.2145242691040039, -0.4324932098388672, 0.925745964050293],\n",
+       "       'a1': [0.0020337123749942145, 0.9311136339895845, 0.36472354545968927],\n",
+       "       'a3': [0.4940571645360539, 0.31616626590497704, -0.8099051861016189],\n",
+       "       'n3': 12,\n",
+       "       'n5': 10,\n",
+       "       'cluster': 1},\n",
+       "      {'id': 12,\n",
+       "       'type': 'A',\n",
+       "       'class': 'DNA',\n",
+       "       'p': [-0.22809123992919922, -0.5259523391723633, 1.326995849609375],\n",
+       "       'a1': [-0.6409073300605252, 0.7661128551711157, -0.04805088361570675],\n",
+       "       'a3': [0.5151160801152461, 0.38283227217679566, -0.7668734415708081],\n",
+       "       'n3': 13,\n",
+       "       'n5': 11,\n",
+       "       'cluster': 1},\n",
+       "      {'id': 13,\n",
+       "       'type': 'C',\n",
+       "       'class': 'DNA',\n",
+       "       'p': [-0.2988166809082031, -0.4232521057128906, 1.7036685943603516],\n",
+       "       'a1': [-0.8505517031860708, -0.34074567934040106, -0.4005673254499456],\n",
+       "       'a3': [0.23540623084515608, 0.4344253484382894, -0.869401244025765],\n",
+       "       'n3': 14,\n",
+       "       'n5': 12,\n",
+       "       'cluster': 1},\n",
+       "      {'id': 14,\n",
+       "       'type': 'T',\n",
+       "       'class': 'DNA',\n",
+       "       'p': [-0.6679525375366211, -0.45626068115234375, 1.9485883712768555],\n",
+       "       'a1': [-0.18686809461530055, -0.9457631304714593, -0.26572996868187915],\n",
+       "       'a3': [0.18657694521153184, 0.23140407211962533, -0.9547990358824147],\n",
+       "       'n3': 15,\n",
+       "       'n5': 13,\n",
+       "       'cluster': 1},\n",
+       "      {'id': 15,\n",
+       "       'type': 'A',\n",
+       "       'class': 'DNA',\n",
+       "       'p': [-0.9642734527587891, -0.5911893844604492, 2.384932041168213],\n",
+       "       'a1': [0.15339870431656613, -0.8580242323305896, -0.490166557659232],\n",
+       "       'a3': [0.09248195643846098, 0.5063260818555844, -0.8573686409976091],\n",
+       "       'n3': 16,\n",
+       "       'n5': 14,\n",
+       "       'cluster': 1},\n",
+       "      {'id': 16,\n",
+       "       'type': 'C',\n",
+       "       'class': 'DNA',\n",
+       "       'p': [-2.0421676635742188, -0.03391265869140625, 2.6617484092712402],\n",
+       "       'a1': [-0.9293397297387037, 0.31674650677404675, -0.18973486020136562],\n",
+       "       'a3': [0.3121204166457478, 0.3994178516488716, -0.8620012907746047],\n",
+       "       'n3': 17,\n",
+       "       'n5': 15,\n",
+       "       'cluster': 1},\n",
+       "      {'id': 17,\n",
+       "       'type': 'G',\n",
+       "       'class': 'DNA',\n",
+       "       'p': [-2.2879295349121094, -0.2157764434814453, 3.0325441360473633],\n",
+       "       'a1': [-0.7764646810824346, 0.2406644021390263, -0.582394406373051],\n",
+       "       'a3': [0.5736462159697244, 0.6524814559822345, -0.49517468483649246],\n",
+       "       'n5': 16,\n",
+       "       'cluster': 1}],\n",
+       "     'end3': 17,\n",
+       "     'end5': 0,\n",
+       "     'class': 'NucleicAcidStrand'}]}],\n",
+       " 'forces': [],\n",
+       " 'selections': []}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json_data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "id": "ae329aa1-bbc6-4c1a-91b7-e193a703e5f1",
    "metadata": {},
@@ -693,6 +886,29 @@
     "# data = np.random.randn(1000, input_dim)\n",
     "dataset = DNAOrigamiDataset(data_list)\n",
     "dataloader = DataLoader(dataset, batch_size=batch_size, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "b3ee2135",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 18, 9])\n",
+      "tensor([ 0.6251,  0.8913, -3.9511,  0.7319,  0.2219,  0.6442,  0.5452, -0.7579,\n",
+      "        -0.3583])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for data in dataloader:\n",
+    "    print(data.shape)\n",
+    "    print(data[0,0,:])\n",
+    "    break\n"
    ]
   },
   {
@@ -777,9 +993,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch-gpu-2.1.0-cuda-12.1",
+   "display_name": "transformers",
    "language": "python",
-   "name": "pytorch-gpu-2.1.0-cuda-12.1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -791,7 +1007,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
